--- a/ML-Agents/mla-1.0/Hummingbird.yaml
+++ b/ML-Agents/mla-1.0/Hummingbird.yaml
@@ -12,7 +12,7 @@ behaviors:
       learning_rate_schedule: linear
     network_settings:
       normalize: false
-      hidden_units: 256
+      hidden_units: 256 #128
       num_layers: 2
       vis_encode_type: simple
       memory:
@@ -23,7 +23,7 @@ behaviors:
         gamma: 0.99
         strength: 1.0
     keep_checkpoints: 5
-    max_steps: 10000000
+    max_steps: 2000000
     time_horizon: 128
     summary_freq: 10000
     threaded: true
