--- a/ML-Agents/mla-1.0/Hummingbird.yaml
+++ b/ML-Agents/mla-1.0/Hummingbird.yaml
@@ -2,7 +2,7 @@ behaviors:
   Hummingbird:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 2048
+      batch_size: 4092 #2048
       buffer_size: 20480
       learning_rate: 0.0003
       beta: 0.005
@@ -23,7 +23,7 @@ behaviors:
         gamma: 0.99
         strength: 1.0
     keep_checkpoints: 5
-    max_steps: 2000000
+    max_steps: 6000000 #5.0e6
     time_horizon: 128
     summary_freq: 10000
     threaded: true
